--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -21,3 +22,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/material_theme_project_new.xml
+.idea/git_toolbox_blame.xml
+.idea/echo-web.iml
