--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_URL=http://localhost:8080/api
-REACT_APP_WS=localhost:8080/api
+# REACT_APP_URL=http://localhost:8080/api
+# REACT_APP_WS=localhost:8080/api
+REACT_APP_SERVER=localhost:8080/api
+REACT_APP_ISSECURE=false
